// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentTitle should render correctly 1`] = `
<header
  className="md-table-card-header quick-link"
  style={undefined}
>
  <div
    className="md-card-title"
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id="autocompletes-proptypes"
      tabIndex={-1}
    >
      <div
        className="quick-link__container"
      >
        Autocomplete
        <a
          className="quick-link__link quick-link__link--title"
          href="#autocompletes-proptypes"
          onClick={[Function]}
        >
          <i
            className="md-icon material-icons"
            style={undefined}
          >
            link
          </i>
        </a>
      </div>
    </h2>
    <div
      className="md-text-field-container md-inline-block md-text-field-container--input md-cell--right"
      onClick={[Function]}
      onDoubleClick={undefined}
      onMouseDown={undefined}
      onMouseLeave={undefined}
      onMouseOver={undefined}
      onMouseUp={undefined}
      onTouchCancel={undefined}
      onTouchEnd={undefined}
      onTouchMove={undefined}
      onTouchStart={undefined}
      style={undefined}
    >
      <input
        className="md-text-field md-text-field--margin md-text"
        disabled={undefined}
        id="autocompletes-proptypes-filter"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Filter props"
        rows={undefined}
        style={undefined}
        type="text"
        value=""
      />
      <hr
        className="md-divider md-divider--text-field md-divider--expand-from-left"
      />
    </div>
    <a
      className="md-btn md-btn--icon md-pointer--hover md-inline-block"
      disabled={undefined}
      href="https://github.com/malursen/react-md/master/tree/src/js/Autocompletes/Autocomplete.js"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <i
        className="md-icon fa fa-github md-text--inherit"
        style={undefined}
      />
    </a>
  </div>
</header>
`;

exports[`ComponentTitle should render correctly 2`] = `
<header
  className="md-table-card-header quick-link"
  style={undefined}
>
  <div
    className="md-card-title"
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id="autocompletes-proptypes"
      tabIndex={-1}
    >
      <span>
        Autocomplete
      </span>
    </h2>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-cell--right"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <i
        className="md-icon material-icons md-text--inherit"
        style={undefined}
      >
        filter_list
      </i>
    </button>
  </div>
</header>
`;
